--- a/nextcloud/docker-compose.yml
+++ b/nextcloud/docker-compose.yml
@@ -6,6 +6,7 @@ volumes:
 
 services:
   db:
+     container_name: Nextcloud-db
     image: mariadb:10.6
     restart: always
     command: --transaction-isolation=READ-COMMITTED --log-bin=binlog --binlog-format=ROW
@@ -18,6 +19,7 @@ services:
       - MYSQL_USER=nextcloud
 
   app:
+     container_name: Nextcloud
     image: nextcloud
     restart: always
     ports:
